--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="exp_form_desc">
                             <h4>OpenclassRooms</h4>
-                            <p>Prep'Web</p>
+                            <p>Prep'Web HTML5 et CSS3</p>
                         </div>
                     </div>
                     <div class="exp_form">
@@ -110,7 +110,7 @@
                         <div class="date">
                             <i class="fas fa-circle"></i>
                             <p>Mars-Avril 2011</p>
-                            <p> - Templemore (Irlande)</p>
+                            <p> -Templemore (Irlande)</p>
                         </div>
                         <div class="exp_form_desc">
                             <h4>Walsh & Son</h4>
@@ -122,13 +122,13 @@
                         <h3><i class="fas fa-pencil-alt"></i>Mes recommandations</h3>
                         <div class="recom_desc">
                             <ul>
-                                <li>MAXIME KIEMAN</li>
+                                <li>Jacqueline Arous</li>
                                 <li>Directeur :</li>
                                 <li>Téléphone : </li>
                                 <li>Email : name@email.com</li>
                             </ul>
                             <ul>
-                                <li>MAXIME KIEMAN</li>
+                                <li>Jacqueline Arous</li>
                                 <li>Directeur :</li>
                                 <li>Téléphone : </li>
                                 <li>Email : name@email.com</li>
@@ -151,7 +151,7 @@
 
                     <h4>À propos de moi</h4>
 
-                    <p>Bonjour, je m'appelle Thierry, je suis né un 11 janvier 1991 dans le sud ouest, après une formation en comptabilité, et des expériences dans le métier d'ouvrier paysagiste, j'ai souhaité me reconvertir dans l'informatique, notamment dans le développement web, passionné par les nouvelles technologies, je cherche à progresser quotidiennement.</p>
+                    <p>Bonjour, je m'appelle Thierry, je suis né un 11 janvier 1991 dans le sud ouest, après une formation en comptabilité, et des expériences dans le métier d'ouvrier paysagiste, j'ai souhaité me reconvertir dans l'informatique, notamment dans le développement web, passionné par les nouvelles technologies, je cherche à progresser quotidiennement. J'ai un anglais correct que j'ai pu apprendre au cours de mon cursus européen. Depuis décembre 2019, grâce à une formation Prep'Web d'OpenClassrooms, j'ai pu maîtriser au fil de ma formation les langages HTML et CSS. Cette formation touchant à sa fin (Juin 2020), je suis désormais à la recherche d'une entreprise afin de parfaire mon expérience et me permettre de devenir développeur d'application frontend en alternance avec Open Classrooms.</p>
                     <p>Nationalité Française</p>
                     <p>Né le 11.01.1991 à Pau</p>
                 </div>
