ajout stage AIO informatique

--- a/index.html
+++ b/index.html
@@ -87,10 +87,21 @@
                     <div class="exp_form"><!--partie gauche des dates et lieux-->
                         <div class="date">
                             <i class="far fa-dot-circle"></i>
+                            <p>Juillet-Sept 2016</p>
+                            <p>- Clermont-Fd (63)</p>
+                        </div>
+                        <div class="exp_form_desc"><!--partie description-->
+                            <h4>AIO Informatique</h4>
+                            <p>Stage Maintenance Informatique</p>
+                        </div>
+                    </div>
+                    <div class="exp_form">
+                        <div class="date">
+                            <i class="fas fa-circle"></i>
                             <p>Etés 2013, 2014 et 2015</p>
                             <p> - Villepinte (93)</p>
                         </div>
-                        <div class="exp_form_desc"><!--partie description-->
+                        <div class="exp_form_desc">
                             <h4>APPF</h4>
                             <p>Ouvrier paysagiste</p>
                         </div>
